--- a/page2.html
+++ b/page2.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <title>Проекты</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        html, body {
+            height: 100%;
+            overflow-y: hidden;
+        }
+    </style>
 </head>
 <body>
     <h2>Здесь пока ничего нет:(<br>Чтобы это исправить...</h2>
-    <div class="mes">
+    <div class="mes" id="wrapper">
+        <div class="content">
         <h3>Свяжитесь со мной:</h3>
         <div>
             <input type="text" id="name" placeholder="Введите имя">
@@ -21,6 +28,7 @@
             <textarea type="text" id="message" cols="31" placeholder="Ваше сообщение..."></textarea>
         </div>
         <button class="btn" type="submit">Отправить!</button>
+        </div>
     </div>
 </body>
 </html>
